<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/phoneno"
        android:padding="10dp"
        android:hint="@string/phone_number_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/password"
        android:padding="10dp"
        android:hint="@string/password_hint"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/signinhint"
        android:id="@+id/sign_in_button"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@mipmap/vibhav_logo"
        android:layout_gravity="center"
        android:id="@+id/vibhavbtn"
        />
</LinearLayout>