<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".record_fragment"
    android:background="#ededed"
    android:layout_margin="10dp"
    android:padding="5dp"
    android:id="@+id/record"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Nametext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="35dp"
                android:text="@string/fragment_name" />

            <TextView
                android:id="@+id/Timetext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_time" />

            <TextView
                android:id="@+id/addresstext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_address" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_delivered"
                android:id="@+id/delivery_status"/>
        </LinearLayout>

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:id="@+id/callbtn"
            android:background="@drawable/ic_phone_black_24dp" />
    </RelativeLayout>
    <!-- TODO: Update blank fragment layout -->


</FrameLayout>